2007-04-10 13:46 -0700  Brendan Cully  <brendan@kublai.com>  (d3e0d6c60d87)

	* rfc3676.c: Don't use $indent_string to quote replies to flowed
	messages (closes #2874).

2007-04-10 10:16 -0700  Petr Písař  <petr.pisar@atlas.cz>  (af01580c9a08)

	* po/cs.po: Updated Czech translation

2007-04-10 10:13 -0700  Brendan Cully  <brendan@kublai.com>  (9bbf304e09bc)

	* rfc3676.c: Wrap flowed lines at no more than FLOWED_MAX in
	replies

2007-04-09 20:36 -0700  Michael Elkins  <me@mutt.org>  (fbe67329e688)

	* main.c: Exit with a nonzero value if sending a message in batch mode
	fails (bug #2709).

	* browser.c: Use mutt_pretty_size() to format '%s' in $folder_format
	so it is similar to '%c' in $hdr_format

2007-04-09 11:32 -0700  Brendan Cully  <brendan@kublai.com>  (df7a0ee95618)

	* imap/TODO: Kill off some IMAP TODO items

	* imap/imap.c: Null out idata->hcache when closing, and remove close
	from open failure (mx_close will handle it).

2007-04-09 08:56 -0700  Vsevolod Volkov  <vvv@mutt.org.ua>  (605c6d60217d)

	* po/ru.po: Updated Russian translation.

2007-04-07 16:22 -0700  Michael Elkins  <me@mutt.org>  (c310dd3d6d73)

	* hook.c, pattern.c: Allow reply-hook to use ~h when replying from the
	index. Fixes regression introduced by fix for bug #2190.
	mutt_pattern_exec() now checks for ctx!=NULL so that Mutt will no
	longer segfault when replying to a message from the attachment menu.

2007-04-07 16:20 -0700  Fabian Groffen  <grobian@gentoo.org>  (1c9db84ed54f)

	* imap/message.c, muttlib.c: Fix compiler aliasing warnings

	* hcache.c: Fix compiler warnings

2007-04-07 16:05 -0700  Jukka Salmi  <jukka@salmi.ch>  (ef35baf2a2d0)

	* configure.ac: Fix BDB autoconf buglet introduced in
	[3638701db407]

2007-04-07 15:21 -0700  Michael Elkins  <me@mutt.org>  (70e637e40943)

	* enter.c: add "|" to the list of shell chars

	* enter.c: "complete" function should consider shell chars to be word
	boundaries when doing filename completion (bug #2871)
